@@ -48,8 +48,6 @@ VARx(ev_tstamp, timeout_blocktime)
 
 VARx(int, backend)
 VARx(int, activecnt) /* total number of active events ("refcount") */
-VARx(unsigned int, loop_count) /* total number of loop iterations/blocks */
-VARx(unsigned int, loop_depth) /* #ev_loop enters - #ev_loop leaves */
 VARx(char, loop_done)  /* signal by ev_unloop */
 
 VARx(int, backend_fd)
@@ -168,10 +166,18 @@ VARx(char, fs_2625) /* whether we are running in linux 2.6.25 or newer */
 VAR (fs_hash, ANFS fs_hash [EV_INOTIFY_HASHSIZE])
 #endif
 
+#if EV_MINIMAL < 2
+VARx(unsigned int, loop_count) /* total number of loop iterations/blocks */
+VARx(unsigned int, loop_depth) /* #ev_loop enters - #ev_loop leaves */
+
 VARx(void *, userdata)
+#endif
+
+#if EV_MINIMAL < 2
 VAR (suspend_cb, void (*suspend_cb)(EV_P))
 VAR (resume_cb , void (*resume_cb) (EV_P))
 VAR (invoke_cb , void (*invoke_cb) (EV_P))
+#endif
 
 #undef VARx
 
